--- a/helm/dagster/charts/dagster-user-deployments/values.yaml
+++ b/helm/dagster/charts/dagster-user-deployments/values.yaml
@@ -22,11 +22,11 @@ celeryConfigSecretName: "dagster-celery-config-secret"
 # All user code will be invoked within the images.
 ####################################################################################################
 deployments:
-  - name: "k8s-example-user-code-1"
+  - name: "dagster-etl"
     image:
       # When a tag is not supplied, it will default as the Helm chart version.
-      repository: "docker.io/dagster/user-code-example"
-      tag: ~
+      repository: "image-registry.openshift-image-registry.svc:5000/c72cba-tools/dagster-etl"
+      tag: latest
       # Change with caution! If you're using a fixed tag for pipeline run images, changing the
       # image pull policy to anything other than "Always" will use a cached/stale image, which is
       # almost certainly not what you want.
